# MEPCore

./: CMakeLists.txt  README.md
doc/: defines.iuml  mepcore.plantuml  mepcore_modules.iuml  mepgenetic.plantuml  mepgenetic_modules.iuml  mepoperation.plantuml  typedefs.iuml
include/mepcore/core/: function.h  gene.h  object.h  operation.h  terminal.h
include/mepcore/gene/: function.h  gene.h  operation.h  terminal.h
include/mepcore/utils/: color.h  log.h  random.h
src/: CMakeLists.txt  MEPCore.pro  chromosome.h  color.h  core.h  functiongene.h  gene.h  genetic.h  main.cpp  mepcore_global.h  object.cpp  object.h  operation.h  terminalgene.h  types.h
src/core/: CMakeLists.txt  chromosome.h  function.cpp  gene.cpp  gene.h  object.cpp  object.h  operation.cpp  terminal.cpp
src/gene/: CMakeLists.txt  gene.cpp
src/genetic/: crossover.h  fitness.h  mutation.cpp  mutation.h  operationset.h  population.h  ptrset.h  rouletteselection.cpp  rouletteselection.h  selection.cpp  selection.h  tournamentselection.cpp  tournamentselection.h
src/operation/: function.h  operation.h  terminal.h
src/utils/: CMakeLists.txt  color.cpp  color.h  log.cpp  log.h  modules.h  random.cpp  random.h  types.h
test/: CMakeLists.txt  MEPCoreTest.pro  double.cpp  double.h  main.cpp  mepcoretest.cpp  mepcoretest.h  modules.h  object_utest.cpp  testgene.cpp  testoperation.cpp  testutils.cpp
vision/MEPVision/: MEPVision.pro  functions.cpp  functions.h  hammingfitness.cpp  hammingfitness.h  image.cpp  image.h  main.cpp
