find_package(Boost REQUIRED COMPONENTS unit_test_framework)

add_executable(testoperation testoperation.cpp)
target_include_directories(testoperation PRIVATE ${Boost_INCLUDE_DIRS})
target_compile_definitions(testoperation PRIVATE BOOST_TEST_DYN_LINK=1 BOOST_TEST_MAIN=1)
target_link_libraries(testoperation ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
target_link_libraries(testoperation libmepcore.so)